Add warning about bulk imports
Large imports are treated the same as day-to-day publishing during virus scan. A warning to bulk import users is a good first step as a reminder, to avoid clashes with daily departmental publishing behaviour.

--- a/app/views/admin/imports/new.html.erb
+++ b/app/views/admin/imports/new.html.erb
@@ -4,6 +4,8 @@
   <section>
     <h1>New import</h1>
 
+    <%= govspeak_to_html "**Alert:** Notify the infrastructure and publishing teams before big imports; they may cause performance issues with day-to-day publishing. " %>
+
     <%= form_for [:admin, @import] do |import_form| %>
       <%= import_form.errors %>
 
